# xbot

./: .gitlab-ci.yml
docs/: about.md  app.md  index.rst  install-ros.md  install-ubuntu.md  intel.md  open.md  ros-setting.md  slam.md  stepin.md  talker.md  use.md
xbot/: package.xml
xbot_bringup/: package.xml
xbot_bringup/launch/: realsense.launch  xbot-arm1.launch  xbot-arm2.launch  xbot-u-arm.launch  xbot.launch
xbot_description/launch/: display.launch
xbot_description/models/xbot/: head_yaw_link.STL  pitch.dae
xbot_description/rviz/: urdf.rviz
xbot_description/urdf/: _d415.urdf.xacro  _usb_plug.urdf.xacro  laser.urdf.xacro  robot.xacro  xbot-u.urdf.xacro
xbot_driver/src/driver/: diff_drive.cpp
xbot_face/script/: face_register.py
xbot_navi/: README.md
xbot_navi/json/: kp.json
xbot_navi/launch/: demo.launch  load_map.launch  view_rviz.launch
xbot_navi/script/: demo.py  input_keypoint.py
xbot_node/: package.xml
xbot_talker/: .gitignore  CMakeLists.txt  README.md  package.xml  setCacheFile.sh
xbot_talker/defaultconfig/: answer_dic.csv  grammar.bnf
xbot_talker/defaultconfig/msc/res/ivw/: wakeupresource.jet
xbot_talker/doc/: description_of_each_module.md  how_to_modify_QA_library.md  old_README.md
xbot_talker/include/asr/baidu/: asr_online.h
xbot_talker/include/awaken/: awaken_offline.h
xbot_talker/include/nlp/: nlp_feedback.h
xbot_talker/include/ros/: xbot_talker_ros.h
xbot_talker/launch/: asr_module.launch  awaken_module.launch  nlp_module.launch  talker.launch  tts_module.launch  xbot_talker.launch
xbot_talker/scripts/: dialogue_configuration.py  voice_control.py
xbot_talker/sdk_examples/xfei_awaken_example/: awaken_offline_example.cpp
xbot_talker/src/ros/: asr_module.cpp  awaken_module.cpp  nlp_module.cpp  tts_module.cpp  xbot_talker_ros.cpp
xbot_talker/srv/: CallPlay.srv  CallVersion.srv  EnableASR.srv
xbot_talker/tests/asr_test/: read_all_files_and_recog.cpp
xbot_talker/tests/nlp_test/: tuling_test.cpp
xbot_tools/: CMakeLists.txt
xbot_tools/scripts/: auto_control.py  keyboard_control.py
