<?xml version="1.0"?>
<package>
  <name>xbot_talker</name>
  <version>3.2.4</version>
  <description>The xbot_talker package</description>

  <author email="wangxy199301@163.com">wangxiaoyun</author>
  <maintainer email="wangpeng@droid.ac.cn">Roc Wang</maintainer>
  <maintainer email="wangxy199301@163.com">wangxiaoyun</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>

  </export>
</package>
